--- a/index.html
+++ b/index.html
@@ -1,48 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ accordion</title>
 
+  <title>Frontend Mentor | FAQ accordion</title>
+  <link rel="stylesheet" href="design/app/scss/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <div class="container">
+    <div class="container_inner">
+      <div class="container_header">
+        <img src="assets/images/icon-star.svg" alt="">
+        <h1>FAQs</h1>
+      </div>
 
-  FAQs
+      <div class="question-block">
+        <div class="question-content"> <span> What is Frontend Mentor, and how will it help me?</span><img
+            src="assets/images/icon-plus.svg" class="btn" alt=""></div>
+        <p class="question-anwser "> Frontend Mentor offers realistic coding challenges to help developers improve
+          their
+          frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+          all levels and ideal for portfolio building.</p>
+      </div>
 
-  What is Frontend Mentor, and how will it help me?
+      <div class="question-block">
+        <div class="question-content"> <span> Is Frontend Mentor free?</span><img src="assets/images/icon-plus.svg"
+            class="btn" alt=""></div>
+        <p class="question-anwser ">Yes, Frontend Mentor offers both free and premium coding challenges, with the
+          free
+          option providing access to a range of projects suitable for all skill levels.</p>
+      </div>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+      <div class="question-block">
+        <div class="question-content"> <span> Can I use Frontend Mentor projects in my portfolio?</span><img
+            src="assets/images/icon-plus.svg" class="btn" alt=""></div>
+        <p class="question-anwser ">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's
+          an
+          excellent
+          way to showcase your skills to potential employers!</p>
+      </div>
 
-  Is Frontend Mentor free?
+      <div class="question-block">
+        <div class="question-content"> <span> How can I get help if I'm stuck on a Frontend Mentor challenge?</span>
+          <img src="assets/images/icon-plus.svg" class="btn" alt="">
+        </div>
+        <p class="question-anwser ">The best place to get help is inside Frontend Mentor's Discord community.
+          There's a
+          help
+          channel where you can ask questions and seek support from other community members.</p>
+      </div>
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-
-  
+    </div>
+  </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="design/app/js/script.js"></script>
 </body>
+
 </html>
